--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <h1>Relatórios</h1>
 
+  <h5>Vendas por Período</h5>
   <table class="table table-striped table-bordered">
-    <thead>Vendas por Período</thead>
     <tbody>
       <tr>
         <th>Ano</th>
@@ -18,8 +18,8 @@
     </tbody>
   </table>
 
+  <h5>Vendas por Categoria</h5>
   <table class="table table-striped table-bordered">
-    <thead>Vendas por Categoria</thead>
     <tbody>
       <tr>
         <th>Categoria</th>
@@ -33,8 +33,8 @@
     </tbody>
   </table>
 
+  <h5>Vendas por Produto</h5>
   <table class="table table-striped table-bordered">
-    <thead>Vendas por Produto</thead>
     <tbody>
       <tr>
         <th>Código do Produto</th>
